--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,7 @@
            {{todo.age}}
           </div>
 
+<button(click)="update()">thols</button>
  <button class="btn" mat-button>Update</button>
 <button class="btn" mat-button>Delete</button>
        
