--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+/*
 body{
     background-color: burlywood;
 }
@@ -56,7 +57,6 @@ p
   margin-left: 0.5cm;
     height:5cm;
      width:5cm;
-    
-
-     
-}
+   @import '@angular/material/prebuilt-themes/pink-bluegrey.css'; 
+}*/     
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
